@@ -83,20 +83,9 @@ class EntitlementsTestRule implements TestRule {
         cluster = ElasticsearchCluster.local()
             .module("entitled", spec -> buildEntitlements(spec, "org.elasticsearch.entitlement.qa.entitled", ENTITLED_POLICY))
             .module(ENTITLEMENT_TEST_PLUGIN_NAME, spec -> setupEntitlements(spec, modular, policyBuilder))
-            .systemProperty("es.entitlements.enabled", "true")
             .systemProperty("es.entitlements.verify_bytecode", "true")
             .systemProperty("es.entitlements.testdir", () -> testDir.getRoot().getAbsolutePath())
             .systemProperties(spec -> tempDirSystemPropertyProvider.get(testDir.getRoot().toPath()))
-            .jvmArg(
-                "--add-exports=java.base/org.elasticsearch.entitlement.bridge="
-                    + "org.elasticsearch.entitlement.qa.test,"
-                    + "org.elasticsearch.entitlement,"
-                    + "org.elasticsearch.entitlement.instrumentation,"
-                    + "java.logging,"
-                    + "java.net.http,"
-                    + "java.naming,"
-                    + "jdk.net"
-            )
             .setting("xpack.security.enabled", "false")
             // Logs in libs/entitlement/qa/build/test-results/javaRestTest/TEST-org.elasticsearch.entitlement.qa.EntitlementsXXX.xml
             // .setting("logger.org.elasticsearch.entitlement", "DEBUG")
